tests/e2e/tests/pilot/testdata/networking/v1alpha3/wildcard-tls-google.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: wildcardgoogle
spec:
  hosts:
  - "*.google.co.uk"
  - "*.google.co.in"
  endpoints:
  - address: google.co.uk
  - address: google.co.in
  location: MESH_EXTERNAL
  resolution: DNS
  ports:
    - number: 443
      name: https
      protocol: TLS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: uk
spec:
  hosts:
  - www.google.co.uk
  tls:
  - match:
    - port: 443
      sni_hosts:
      - www.google.co.uk
    route:
    - destination:
        host: '*.google.co.uk'
        port:
          number: 443
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: in
spec:
  hosts:
  - www.google.co.in
  tls:
  - match:
    - port: 443
      sni_hosts:
      - www.google.co.in
    route:
    - destination:
        host: '*.google.co.in'
        port:
          number: 443
      weight: 100
